--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -73,3 +73,11 @@ div.avatar img {
 #items ul {
   list-style: none;
 }
+
+#github-ribbon {
+    z-index:999;
+    position: fixed;
+    bottom: 0; right: 0;
+    border: 0;
+}
+
