--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -5,8 +5,18 @@ body {
   padding:4px;
 }
 
-h1 {
-  margin-top:0;
+#header {
+  padding-bottom:4px;
+  font-style:italic;
+}
+
+#logo {
+  font-size:150%;
+}
+
+#logo img {
+  vertical-align:bottom;
+  margin:2px;
 }
 
 #account {
